Use jlink to create runtime and application image